--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ langgraph = "^0.2.67"
 openai = "^1.60.2"
 langchain-openai = "^0.3.2"
 grandalf = "^0.8"
+ipython = "^8.31.0"
+langchain-community = "^0.3.16"
 
 
 [build-system]
